<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_background_first"
    android:textAlignment="center"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView"
        android:layout_width="289dp"
        android:layout_height="39dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/registration_app"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.017" />

    <!--adding input fields -->

    <EditText
        android:id="@+id/FullName"
        android:layout_width="340dp"
        android:layout_height="49dp"
        android:layout_marginTop="102dp"
        android:background="#DADFE3"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="@string/full_name"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.002"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="340dp"
        android:layout_height="49dp"
        android:layout_marginTop="112dp"
        android:background="#DADFE3"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="Email"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.120000005"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="340dp"
        android:layout_height="49dp"
        android:layout_marginTop="112dp"
        android:background="#DADFE3"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="@string/password"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.264"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Phone"
        android:layout_width="340dp"
        android:layout_height="49dp"
        android:layout_marginTop="112dp"
        android:background="#DADFE3"
        android:ems="10"
        android:freezesText="true"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.407"
        tools:visibility="visible"
        android:autofillHints="" />



    <Button
        android:id="@+id/registerButton"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:layout_marginTop="356dp"
        android:background="#55ADF4"
        android:insetTop="10dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/loginButton"
        android:layout_width="235dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/already_registered_login_here"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="407dp"
        android:layout_height="49dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        app:layout_constraintVertical_bias="0.494" />
</androidx.constraintlayout.widget.ConstraintLayout>